kubernetes-manifests/mutate-me-template.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutate-me
webhooks:
  - name: mutate-me.default.svc.cluster.local
    admissionReviewVersions:
      - "v1beta1"
    sideEffects: "None"
    timeoutSeconds: 30
    objectSelector:
      matchLabels:
        mutate-me-webhook-enabled: "true"
    clientConfig:
      service:
        name: mutate-me
        namespace: default
        path: "/mutate"
      caBundle: "${CA_PEM_B64}"
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
