kubernetes-manifests/mutate-me.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutate-me-webhook
webhooks:
  - name: mutate-me-webhook.default.svc.cluster.local
    admissionReviewVersions:
      - "v1beta1"
    sideEffects: "None"
    timeoutSeconds: 30
    objectSelector:
      matchLabels:
        mutate-me-webhook-enabled: "true"
    clientConfig:
      service:
        name: mutate-me-webhook
        namespace: devops
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURYRENDQWtTZ0F3SUJBZ0lVYlc2QVEzWVl4OVpYNnlZbjdranJ3STIzUVpBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1JqRUxNQWtHQTFVRUJoTUNTVTR4RERBS0JnTlZCQWdUQTBkTFJURU9NQXdHQTFVRUJ4TUZUbTlwWkdFeApEREFLQmdOVkJBb1RBMGRMUlRFTE1Ba0dBMVVFQ3hNQ1EwRXdIaGNOTWpNd01qRTBNRFl5TWpBd1doY05Namd3Ck1qRXpNRFl5TWpBd1dqQkdNUXN3Q1FZRFZRUUdFd0pKVGpFTU1Bb0dBMVVFQ0JNRFIwdEZNUTR3REFZRFZRUUgKRXdWT2IybGtZVEVNTUFvR0ExVUVDaE1EUjB0Rk1Rc3dDUVlEVlFRTEV3SkRRVENDQVNJd0RRWUpLb1pJaHZjTgpBUUVCQlFBRGd [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
